--- a/index-video.html
+++ b/index-video.html
@@ -71,13 +71,13 @@
             </div>
 
             <div class="filter"></div>
-            <video autoplay="true" loop class="fillWidth video-header">
+            <video autoplay="true" preload="true" poster="video/event-video.jpg" loop class="fillWidth video-header">
                 <source src="video/bytom.mp4" type="video/mp4" />
                 <!-- <source src="video/event-video.webm" type="video/webm" /> -->
             </video>
-            <div class="poster hidden">
+            <!-- <div class="poster hidden">
                 <img src="video/event-video.jpg" alt="event video poster">
-            </div>
+            </div> -->
         </div>
 
     </header>
