图片路径更新

--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
         <div class="section-title wow fadeInUp">
             <h4 class="bytom-block-title">The <span>Reward</span></h4>
         </div>
-        <img class="reward-img" src="/images/devcon/reward.png" alt="">
+        <img class="reward-img" src="images/devcon/reward.png" alt="">
         <div class="row">
             <div class="col-sm-6 col-md-4">
                 <div class="thumbnail wow fadeInUp">
@@ -319,14 +319,14 @@
                     <div class="row">
                         <div class="col-sm-6">
                             <div class="benefit-item wow fadeInLeft">
-                                <div class="benefit-icon"><img src="/images/devcon/icon-1@2x.png" alt=""></div>
+                                <div class="benefit-icon"><img src="images/devcon/icon-1@2x.png" alt=""></div>
                                 <!-- <h6 class="benefit-title">One great night</h6> -->
                                 <p>Technical guidance, business incubation</p>
                             </div>
                         </div>
                         <div class="col-sm-6">
                             <div class="benefit-item wow fadeInRight">
-                                <div class="benefit-icon"><img src="/images/devcon/icon-2@2x.png" alt=""></div>
+                                <div class="benefit-icon"><img src="images/devcon/icon-2@2x.png" alt=""></div>
                                 <!-- <h6 class="benefit-title">Location</h6> -->
                                 <p>Excellent and innovative projects, Strategic investment from Bytom</p>
                             </div>
@@ -334,14 +334,14 @@
 
                         <div class="col-sm-6">
                             <div class="benefit-item wow fadeInLeft">
-                                <div class="benefit-icon"><img src="/images/devcon/icon-3@2x.png" alt=""></div>
+                                <div class="benefit-icon"><img src="images/devcon/icon-3@2x.png" alt=""></div>
                                 <!-- <h6 class="benefit-title">Free food and drink!</h6> -->
                                 <p>Best judge team, high-profile figures</p>
                             </div>
                         </div>
                         <div class="col-sm-6">
                             <div class="benefit-item wow fadeInRight">
-                                <div class="benefit-icon"><img src="/images/devcon/icon-4@2x.png" alt=""></div>
+                                <div class="benefit-icon"><img src="images/devcon/icon-4@2x.png" alt=""></div>
                                 <!-- <h6 class="benefit-title">Accommodation</h6> -->
                                 <p>Exclusive interview, enormous media exposure</p>
                             </div>
