--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <![endif]-->
         
         <!-- Modernizr -->
-    <link href="css/bytom.css" rel="stylesheet">
+    <link href="css/bytom.css?v=3" rel="stylesheet">
     <script src="js/modernizr.min.js"></script>
     <!-- Subtle Loading bar -->
     <script src="js/plugins/pace.js"></script>
@@ -72,8 +72,8 @@
 
             <div class="filter"></div>
             <video autoplay="true" preload="true" poster="video/event-video.jpg" loop class="fillWidth video-header">
-                <source src="video/bytom.mp4" type="video/mp4" />
-                <!-- <source src="video/event-video.webm" type="video/webm" /> -->
+                <source src="//bycoin.oss-cn-shanghai.aliyuncs.com/bytom/bytom.io/bytom.mp4" type="video/mp4" />
+                <source src="//bycoin.oss-cn-shanghai.aliyuncs.com/bytom/bytom.io/bytom.webm" type="video/webm" />
             </video>
             <!-- <div class="poster hidden">
                 <img src="video/event-video.jpg" alt="event video poster">
@@ -81,6 +81,8 @@
         </div>
 
     </header>
+
+    
 
     <!-- 
      Highlight Section
@@ -276,7 +278,7 @@
             <h4 class="bytom-block-title">The <span>Reward</span></h4>
         </div>
         <img class="reward-img" src="images/devcon/reward.png" alt="">
-        <div class="row">
+        <div class="row reward-web">
             <div class="col-sm-6 col-md-4">
                 <div class="thumbnail wow fadeInUp">
                     <div class="caption">
@@ -301,6 +303,35 @@
                         <h6 class="caption-title">Second Prize</h6>
                         <p class="caption-text">2 Projects </p>
                         <p class="btm">BTM equivalent of $10,000</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row reward-mobile">
+            <div class="col-sm-6 col-md-4">
+                <div class="thumbnail wow fadeInUp" data-wow-delay="0.3s">
+                    <div class="caption">
+                        <h6 class="caption-title">First Prize</h6>
+                        <p class="caption-text">1 Project </p>
+                        <p class="btm">BTM equivalent of $30,000</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-0">
+                <div class="thumbnail wow fadeInUp" data-wow-delay="0.6s">
+                    <div class="caption">
+                        <h6 class="caption-title">Second Prize</h6>
+                        <p class="caption-text">2 Projects </p>
+                        <p class="btm">BTM equivalent of $10,000</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6 col-md-4">
+                <div class="thumbnail wow fadeInUp">
+                    <div class="caption">
+                        <h6 class="caption-title">Third Prize</h6>
+                        <p class="caption-text">3 Projects</p>
+                        <p class="btm">BTM equivalent of $5,000</p>
                     </div>
                 </div>
             </div>
