--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <![endif]-->
         
         <!-- Modernizr -->
-    <link href="css/bytom.css?v=3" rel="stylesheet">
+    <link href="css/bytom.css?v=5" rel="stylesheet">
     <script src="js/modernizr.min.js"></script>
     <!-- Subtle Loading bar -->
     <script src="js/plugins/pace.js"></script>
@@ -61,7 +61,7 @@
                 <div class="container">
                     <h1 class="homeTitle headline wow fadeInDown" data-wow-delay="0.1s">Bytom DevCon2</h1>
                     <div class="when_where wow fadeIn" data-wow-delay="0.4s">
-                        <p class="event_when">September 7st - 8th 2019</p>
+                        <p class="event_when">September 7th - 8th 2019</p>
                         <p class="event_where">San Francisco, U.S</p>
                     </div>
                     <div class="header_bottom-bg">
