文案优化，添加Google统计

--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
             </div>
 
             <div class="des">
-                Based on this background, after the successful launch of the first Bytom Devcon in 2018, with the purpose of further promoting the application of blockchain technology, developing the sustainable open source ecology and motivating developer talents. The second Bytom Devcon will be held in 2019 August, and we hope to meet you all at Bytom Devcon!
+                Based on this background, after the successful launch of the first Bytom Devcon in 2018, with the purpose of further promoting the application of blockchain technology, developing the sustainable open source ecology and motivating developer talents. The second Bytom Devcon will be held in September 2019, and we hope to meet you all at Bytom Devcon!
             </div>
 
             <div class="row">
@@ -563,6 +563,15 @@
 
     <!-- Main Script -->
     <script src="js/main.js"></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-139977346-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-139977346-1');
+    </script>
 
 </body>
 
