添加联系方式

--- a/index.html
+++ b/index.html
@@ -529,6 +529,12 @@
             <a href="https://twitter.com/Bytom_Official" class="wow zoomIn"> <i class="fa fa-twitter"></i> </a>
             <a href="https://www.facebook.com/bytomofficial/" class="wow zoomIn" data-wow-delay="0.2s"> <i class="fa fa-facebook"></i> </a>
         </div>
+        <p class="contact">
+            <span><i>Business :</i> zhangx@bytom.io</span>
+            <span><i>Media :</i> reny@bytom.io</span>
+            <span><i>Consult :</i> contact@bytom.io</span>
+            <span><i>Speaker :</i> zoepeng@bytom.io</span>
+        </p>
         <p> <small class="text-muted">Copyright © 2019. All rights reserved. Bytom.io</small></p>
 
     </footer>
