--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <div class="container">
                     <h1 class="homeTitle headline wow fadeInDown" data-wow-delay="0.1s">Bytom DevCon2</h1>
                     <div class="when_where wow fadeIn" data-wow-delay="0.4s">
-                        <p class="event_when">August 24th - 25th 2019</p>
+                        <p class="event_when">August 24th 2019</p>
                         <p class="event_where">San Francisco, U.S</p>
                     </div>
                     <div class="header_bottom-bg">
@@ -233,18 +233,7 @@
                         </div>
                         <!-- timeline-block -->
 
-                        <div class="timeline-block">
-                            <div class="timeline-bullet wow zoomIn" data-wow-delay="0s">
-
-                            </div>
-                            <!-- timeline-bullet -->
-
-                            <div class="timeline-content">
-                                <h2 class="wow flipInX" data-wow-delay="0.3s"> Roadshow</h2>
-                                <span class="date wow flipInX" data-wow-delay="0.3s">Aug 24th</span>
-                            </div>
-                            <!-- timeline-content -->
-                        </div>
+                        
                         <!-- timeline-block -->
 
                         <div class="timeline-block">
@@ -255,7 +244,7 @@
 
                             <div class="timeline-content">
                                 <h2 class="wow flipInX" data-wow-delay="0.3s"> DevCon2</h2>
-                                <span class="date wow flipInX" data-wow-delay="0.3s">Aug 25th</span>
+                                <span class="date wow flipInX" data-wow-delay="0.3s">Aug 24th</span>
                             </div>
                             <!-- timeline-content -->
                         </div>
