--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <![endif]-->
 
     <!-- Modernizr -->
-    <link href="css/bytom.css?v=5" rel="stylesheet" />
+    <link href="css/bytom.css?v=6" rel="stylesheet" />
     <script src="js/modernizr.min.js"></script>
     <!-- Subtle Loading bar -->
     <script src="js/plugins/pace.js"></script>
@@ -68,7 +68,7 @@
     data-offset="100"
   >
     <!--Preloader div-->
-    <div class="img-bytom"><img src="images/devcon/bytom.png" alt=""></div>
+    <div class="img-bytom"><img width="0" hight="0" src="images/devcon/bytom.png" alt=""></div>
     <div class="preloader"></div>
 
     <header id="top" class="header-video-module">
@@ -659,7 +659,7 @@
           <h4>PRICING</h4>
         </div>
         <div class="row">
-          <div class="col-md-6 price wow zoomIn"
+          <div class="col-md-6 prices wow zoomIn"
             data-wow-delay="0.3s"
             data-wow-duration="2s">
               <img src="images/devcon/WechatIMG1807.png" alt="">
@@ -821,9 +821,6 @@
         </a>
         <a href="https://weibo.com/u/5966947038?refer_flag=1001030101_" class="wow zoomIn">
           <i class="fa fa-weibo"></i>
-        </a>
-        <a href="https://mp.weixin.qq.com/s/fLCk33KYQTouevEAi0a0Kg" class="wow zoomIn">
-          <i class="fa fa-wechat"></i>
         </a>
         <a href="https://www.linkedin.com/company/bytom-foundation" class="wow zoomIn">
           <i class="fa fa-linkedin"></i>
