替换媒体图

--- a/index.html
+++ b/index.html
@@ -609,7 +609,7 @@
           <div class="tab-content">
             <div role="tabpanel" class="tab-pane active" id="photos">
               <img
-                src="images/devcon/Media/International Media Report.png"
+                src="images/devcon/Media/Web-InternationalMediaReport.png"
                 alt=""
               />
             </div>
@@ -621,7 +621,7 @@
         <div class="media-mobile">
           <p>International Media Report</p>
           <img
-            src="images/devcon/Media/Wap-International Media Report.png"
+            src="images/devcon/Media/Wap-InternationalMediaReport.png"
             alt=""
           />
           <p>Chinese Media Partner</p>
