--- a/index.html
+++ b/index.html
@@ -192,11 +192,11 @@
                 >TimeStamp</a
               >
             </li>
-            <li role="presentation">
+            <!-- <li role="presentation">
               <a href="#day2" aria-controls="day2" role="tab" data-toggle="tab"
                 >Agenda</a
               >
-            </li>
+            </li> -->
           </ul>
         </div>
 
