--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <![endif]-->
 
     <!-- Modernizr -->
-    <link href="css/bytom.css?v=6" rel="stylesheet" />
+    <link href="css/bytom.css?v=8" rel="stylesheet" />
     <script src="js/modernizr.min.js"></script>
     <!-- Subtle Loading bar -->
     <script src="js/plugins/pace.js"></script>
@@ -340,8 +340,8 @@
               alt="avatar"
               class="img-responsive center-block"
             />
-            <p>Duan Xinxing</p>
-            <span>Founder and CEO of Bytom</span>
+            <p>Xinxing Duan</p>
+            <span>Bytom , Founder and CEO</span>
           </div>
 
           <div class="speaker-info wow fadeIn" data-wow-delay="0.1s">
@@ -350,8 +350,8 @@
               alt="avatar"
               class="img-responsive center-block"
             />
-            <p>Lang Yu</p>
-            <span>CTO of Bytom</span>
+            <p>Yu Lang</p>
+            <span>Bytom , CTO</span>
           </div>
 
           <div class="speaker-info wow fadeIn" data-wow-delay="0.2s">
@@ -360,8 +360,8 @@
               alt="avatar"
               class="img-responsive center-block"
             />
-            <p>Jin Lei</p>
-            <span>CO-CTO of Bytom</span>
+            <p>Lei Jin</p>
+            <span>Bytom , CO-CTO</span>
           </div>
 
           <div class="speaker-info wow fadeIn" data-wow-delay="0.3s">
@@ -371,7 +371,7 @@
               class="img-responsive center-block"
             />
             <p>James</p>
-            <span>VP Engineering</span>
+            <span>Bytom , VP Engineering</span>
           </div>
 
           <div class="speaker-info wow fadeIn" data-wow-delay="0.4s">
@@ -381,7 +381,16 @@
               class="img-responsive center-block"
             />
             <p>Wang Wei</p>
-            <span>BBFT Presenter</span>
+            <span>Bytom , BBFT Presenter</span>
+          </div>
+          <div class="speaker-info wow fadeIn" data-wow-delay="0.4s">
+            <img
+              src="images/devcon/Speaker/05.png"
+              alt="avatar"
+              class="img-responsive center-block"
+            />
+            <p>Sili Zhao</p>
+            <span>Infstone, Head of Business</span>
           </div>
         </div>
       </div>
@@ -677,7 +686,7 @@
                 <li>Free Coffee / Snacks</li>
                 <li>Free T-Shirt</li>
               </ul>
-              <a class="btn btn-success btn-lg" target="_blank" href="https://www.eventbrite.com/e/bytom-blockchain-global-devcon-tickets-63913041628?aff=Star">Tickets</a>
+              <a class="btn btn-success btn-lg" target="_blank" href="https://www.eventbrite.com/e/2019-bytom-global-blockchain-devcon-tickets-65496402503">Tickets</a>
             </div>
           </div>
           
