--- a/index.html
+++ b/index.html
@@ -383,6 +383,8 @@
             <p>Wang Wei</p>
             <span>Bytom , BBFT Presenter</span>
           </div>
+        </div>
+        <div class="bytom-speakers">
           <div class="speaker-info wow fadeIn" data-wow-delay="0.4s">
             <img
               src="images/devcon/Speaker/05.png"
@@ -390,8 +392,20 @@
               class="img-responsive center-block"
             />
             <p>Sili Zhao</p>
-            <span>Infstone, Head of Business</span>
+            <span>Infstone</span>
           </div>
+          <div class="speaker-info wow fadeIn" data-wow-delay="0.4s">
+            <img
+              src="images/devcon/Speaker/06.png"
+              alt="avatar"
+              class="img-responsive center-block"
+            />
+            <p>Daniel Yan</p>
+            <span>Matrixport, Senior VP of Trading Founding Partner</span>
+          </div>
+          <div class="speaker-info wow fadeIn"></div>
+          <div class="speaker-info wow fadeIn"></div>
+          <div class="speaker-info wow fadeIn"></div>
         </div>
       </div>
     </section>
