--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
+<!--
+ * @Description: In User Settings Edit
+ * @Author: your name
+ * @Date: 2019-05-11 16:45:37
+ * @LastEditTime: 2019-05-11 16:45:37
+ * @LastEditors: your name
+ -->
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -384,7 +392,7 @@
             <span>Bytom , BBFT Presenter</span>
           </div>
         </div>
-        <div class="bytom-speakers">
+        <!-- <div class="bytom-speakers">
           <div class="speaker-info wow fadeIn" data-wow-delay="0.4s">
             <img
               src="images/devcon/Speaker/05.png"
@@ -406,7 +414,7 @@
           <div class="speaker-info wow fadeIn"></div>
           <div class="speaker-info wow fadeIn"></div>
           <div class="speaker-info wow fadeIn"></div>
-        </div>
+        </div> -->
       </div>
     </section>
 
